# schedule-iq

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RUN_WINDOWS.md  pyproject.toml
.github/workflows/: build.yml
assets/: LI_report_base.docx
docs/: AACE_CDR_PAPER_OPTIONS.md  ANALYTICS_PROPOSAL.md  ARCHITECTURE.md  BACKLOG.md  CCM_METHODOLOGY.md  CCM_PEER_REVIEW_PROMPT.md  FUSE_PARITY.md  GOVERNANCE.md  HANDOFF.md  INSTALL.md  LI-01-v0.5-briefing.md  LI-kernel-v2-design-2026-07-12.md  METHODOLOGY.md  METRIC_MATRIX.md  REFERENCES.md  REPORT_CARD_DESIGN.md
docs/adr/: ADR-0001-python-desktop-stack.md  ADR-0002-format-support.md  (+5 more)
docs/ui/: README.md
installer/: launch_gui.py  scheduleiq.spec
profiles/: example_profile.yaml
scripts/: build_public_spec.py  capture_ui.py  render_app_icon.py  render_matrix.py
tests/: test_asbuilt.py  test_blocker_taxonomy.py  test_cockpit.py  test_corpus_priors.py  test_dailyledger.py  test_damages_rc6.py  test_editsessions.py  test_forensic_outputs.py  test_gui.py  test_halfstep.py  test_handshake_set02.py  test_impact.py  test_impact_outputs.py  test_intake.py  test_li_indices.py  test_li_provocative.py  test_li_record.py  test_li_sentinels.py  test_li_wiring.py  test_montecarlo.py  test_new_checks.py  test_p6xml.py  test_pacing_narrative.py  test_paths.py  test_r_id_identity.py  test_ribbon_phase_compliance.py  test_robustness.py  test_scheduleiq.py  test_scorecard.py  test_stats_es_capsule.py  test_tia.py  test_v04_wiring.py  test_weather.py  test_workpatterns.py  test_xer_calendar_dialects.py
tools/: build_icon_subset.py
(+241 files in other folders)
